--- a/composer/vendor.qti.hardware.display.composer-service.rc
+++ b/composer/vendor.qti.hardware.display.composer-service.rc
@@ -6,4 +6,4 @@ service vendor.qti.hardware.display.composer /vendor/bin/hw/vendor.qti.hardware.
     onrestart restart surfaceflinger
     onrestart restart feature_enabler_client
     socket pps stream 0660 system system
-    writepid /dev/cpuset/system-background/tasks
+    task_profiles ServiceCapacityLow
